门店租赁统计样式修改

--- a/WebContent/crm/store_rent_info.html
+++ b/WebContent/crm/store_rent_info.html
@@ -196,7 +196,7 @@
                         <!-- 支付方式详细数据-->
                         <div class="box-body">
                             <div>
-                                <h3 class="text-center">城市付款方式统计</h3>
+                                <h3 class="text-left">付款方式分布(城市)</h3>
                                 <table class="table table-striped table-bordered" id="store_payment_method_info">
                                     <tbody>
                                     <tr class="bg-light-blue">
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                     <div class="box box-default">
-                        <div class="box-header h1 text-light-blue"><strong>全国星店数据分析</strong></div>
+                        <div class="box-header h1 text-light-blue"><strong>全国星店概况</strong></div>
                         <div class="box-body" style="padding: 0 10px 10px 10px">
                             <!--<div class="col-sm-12">
                                 <h5 class="text-yellow" style="margin: 0 0 10px 0"><b>数据分析原则及情况简介：</b></h5>
@@ -222,6 +222,7 @@
                                 <p>由于星店主要集中在北京，下面仅对北京星店的明细数据进行展示，只有北京22家星店中的12家支付过中介费，共计22.63万元，平均每家支付1.89万元。</p>
                             </div>-->
                             <div class="col-sm-12">
+                                <h3 class="text-left">星店概况(城市)</h3>
                                 <table class="table table-striped table-bordered" id="star_store_analyze">
                                     <tbody>
                                     <tr class="bg-light-blue">
@@ -238,7 +239,7 @@
                                 </table>
                             </div>
                             <div class="col-sm-12">
-                                <h3 class="text-center">北京星店数据明细</h3>
+                                <h3 class="text-left">星店概况(北京)</h3>
                                 <table class="table table-striped table-bordered" id="star_store_info">
                                     <tbody>
                                     <tr class="bg-light-blue">
@@ -259,7 +260,7 @@
                         </div>
                     </div>
                     <div class="box box-default">
-                        <div class="box-header h1 text-light-blue"><strong>全国校园店数据分析</strong></div>
+                        <div class="box-header h1 text-light-blue"><strong>全国校园店概况</strong></div>
                         <div class="box-body" style="padding: 0 10px 10px 10px">
                             <!--<div class="col-sm-12">
                                 <h5 class="text-yellow" style="margin: 0 0 10px 0"><b>数据分析原则及情况简介：</b></h5>
@@ -268,6 +269,7 @@
                                 <p>所有校园店中只有北京的林业大学店支付过中介费，计19666元。</p>
                             </div>-->
                             <div class="col-sm-12">
+                                <h3 class="text-left">校园店概况(城市)</h3>
                                 <table class="table table-striped table-bordered" id="school_store_analyze">
                                     <tbody>
                                     <tr class="bg-light-blue">
@@ -284,7 +286,7 @@
                                 </table>
                             </div>
                             <div class="col-sm-12">
-                                <h3 class="text-center">全国校园店数据明细</h3>
+                                <h3 class="text-left">校园店概况(门店)</h3>
                                 <table class="table table-striped table-bordered" id="school_store_info">
                                     <tbody>
                                     <tr class="bg-light-blue">
