修改安心合作社文本内容

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -165,7 +165,7 @@
                             <div class="col-sm-12">
                                 <dt style="margin-top: 20px;">安心合作社<em><img src="dist/img/member1.png"></em></dt>
                                 <ul class="clearfix">
-                                    <li class="col-sm-4 no-padding"><i class="glyphicon glyphicon-home"></i>安心合作社：<span id="eShopCount"></span></li>
+                                    <li class="col-sm-4 no-padding"><i class="glyphicon glyphicon-home"></i>合作社E店：<span id="eShopCount"></span></li>
                                     <li class="col-sm-4 no-padding"><i class="glyphicon glyphicon-equalizer"></i>SKU总数：<span id="skuCount"></span></li>
                                     <li class="col-sm-4 no-padding"><i class="fa fa-hourglass-half"></i>SKU动销：<span id="movingPinCount"></span></li>
                                 </ul>
@@ -431,7 +431,7 @@
                     <div class="box box-default">
                         <div class="box-body">
                             <div class="col-sm-5">
-                                <h4 class="text-light-blue"><strong>安心合作社成交额</strong></h4>
+                                <h4 class="text-light-blue"><strong>安心合作社E店成交额</strong></h4>
                                 <div class="col-sm-12 no-padding" id="main16" style="height: 260px;"></div>
                             </div>
                             <div class="col-sm-7">
@@ -473,11 +473,11 @@
                     <div class="box box-default">
                         <div class="box-body">
                             <div class="col-sm-7 no-padding">
-                                <h4 class="box-header h4 text-light-blue"><strong>安心合作社排行榜</strong></h4>
+                                <h4 class="box-header h4 text-light-blue"><strong>安心合作社E店排行榜</strong></h4>
                                 <table class="table table-bordered">
                                     <tbody id="eshop_data">
                                     <tr>
-                                        <th>安心合作社名称</th>
+                                        <th>合作社E店名称</th>
                                         <th>成交额</th>
                                         <th>订单量</th>
                                         <th>排名</th>
