--- a/WebContent/crm/store_rent_info.html
+++ b/WebContent/crm/store_rent_info.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>门店租赁统计</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../icon.png" />
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=0.3, maximum-scale=1, user-scalable=yes" name="viewport">
     <!-- Bootstrap 3.3.6 -->
