门店编号长度限制校验

--- a/WebContent/hr/external_human_edit.html
+++ b/WebContent/hr/external_human_edit.html
@@ -242,7 +242,7 @@ table te .letter{ letter-spacing:2em;}
 				<td>
 					<p></p>
 					<p>
-						门店编号：<input type="text" id="store_no"  style="width: 40%;" />
+						门店编号：<input type="text" id="store_no"  style="width: 40%;" maxlength="9" />
 					</p>
 				</td>
 			</tr>
