修改提示文字

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -149,10 +149,10 @@
         </nav>
     </header>
     <div id="tishidiv1" style="position: absolute; display: none; border: 1px solid silver;background: silver;z-index: 888;">
-        平均客单价=周活跃社员在合作社E店GMV÷周活跃社员
+        统计范围：社员在合作社E店里近7日消费<!--平均客单价=周活跃社员在合作社E店GMV÷周活跃社员-->
     </div>
     <div id="tishidiv2" style="position: absolute; display: none; border: 1px solid silver;background: silver;z-index: 888;">
-        周消费频次=周活跃社员在合作社E店订单数÷周活跃社员
+        统计范围：社员在合作社E店里近7日消费<!--周消费频次=周活跃社员在合作社E店订单数÷周活跃社员-->
     </div>
     <!-- Content Wrapper. Contains page content -->
     <div id="page">
