修复火狐浏览器弹框不兼容问题

--- a/WebContent/crm/dynamicData_tinyvillage.html
+++ b/WebContent/crm/dynamicData_tinyvillage.html
@@ -577,7 +577,7 @@
 	        		   if(jData[i].tiny_map=='无'){
 	        			   mm='无';
 	        		   }else{
-	        			   mm='<a href="javascript:void(0);" target="myFrameId" onclick="showIframe(\''+jData[i].tinyvillage_code+'\',\''+jData[i].id+'\')">有</a>'
+	        			   mm='<a href="javascript:void(0);" target="_self" onclick="showIframe(\''+jData[i].tinyvillage_code+'\',\''+jData[i].id+'\')">有</a>'
 	        		   }
 	        		   
 	        		   
