--- a/WebContent/cost_statistics/each_project_cost.html
+++ b/WebContent/cost_statistics/each_project_cost.html
@@ -15,27 +15,17 @@
     <link href="../scripts/css/auto.css" rel="stylesheet">
 
 
-    <!-- jQuery 2.2.0 -->
-    <script src="../crm/plugins/jQuery/jQuery-2.2.0.min.js"></script>
+
+
+    <script type="text/javascript" src="../crm/plugins/jQuery/jQuery-2.2.0.min.js"></script>
+    <script type="text/javascript" src="../startbootstrap/js/layer.js"></script>
     <script type="text/javascript" src="../crm/laydate/laydate.js"></script>
     <script type="text/javascript" src="plugins/fixed-columns/js/bootstrap.min.js"></script>
-    <!--<script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-table.js"></script>-->
-    <!--<script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-table-fixed-columns.js"></script>-->
-    <!--<script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-table-zh-CN.min.js.js"></script>-->
-    <!--&lt;!&ndash;-行内编辑使用的 1.1.5&ndash;&gt;-->
-    <!--<script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-editable.js"></script>-->
-    <!--&lt;!&ndash;封装了bootstrap-table对x-editable的使用&ndash;&gt;-->
-    <!--<script type="text/javascript" src="plugins/fixed-columns/js/bootstrap-table-editable.js"></script>-->
-    <script type="text/javascript" src="../scripts/bidLibjsjquery3.0.js"></script>
-    <script src="../crm/dist/js/headquarters/conversion_utils.js"></script>
-    <script src="../crm/plugins/date-new/js/jquery-ui-1.9.2.custom.js" type = "text/javascript"></script>
+    <script type="text/javascript" src="js/bidLib2.0.js"></script>
     <script src="js/cost_labor.js" type = "text/javascript"></script>
 
     <script type="text/javascript">
-        var observe_month=decode64(getUrlParamByKey("om"));
-        var add_edit=decode64(getUrlParamByKey("t"));
-        var store_name=decode64(getUrlParamByKey("sn"));
-        var store_id=decode64(getUrlParamByKey("si"));
+
         var observe_question_number = 0;
         var colorStyleArray = ["trbg1","trbg2","trbg3","trbg4","trbg5","trbg6","trbg7","trbg8","trbg9","trbg10","trbg11","trbg12"];
 
@@ -51,21 +41,25 @@
         }
 
         var month_array = ["一月","二月","三月","四月","五月","六月","七月","八月","九月","十月","十一月","十二月"];
-        $(function(){
+
+        $(function () {
+
+            var cur_date = new Date();
+            var year = cur_date.getFullYear();
+            laydate.render({//月份控件
+                elem:'#year_labor',
+                value:new Date(),
+                type:"year",
+                btns: ['confirm','now'],
+                theme: '#428bca'
+            });
+
+
             getCostLabor();//获取人工成本
-        });
+
+        })
 
 
-
-        var cur_date = new Date();
-        var year = cur_date.getFullYear();
-        laydate.render({//月份控件
-            elem:'#year_labor',
-            value:new Date(),
-            type:"year",
-            btns: ['confirm','now'],
-            theme: '#428bca'
-        });
 
 
 
@@ -114,7 +108,6 @@
 <div class="panel panel-primary" style="margin: 10px 5px 0 5px">
     <div class="panel-heading">成本控制
         <span class="but">
-			<input name="" id="saveclick" type="submit" onclick="yanzhen();" value="保存">
 			<input name="" type="button" onclick="javascript:history.go(-1);" value="返回">
 		</span>
     </div>
@@ -127,7 +120,7 @@
             </ul>
             <div class="tab-content no-padding">
                 <div class="tab-pane active" id="tab_1">
-                    <form action="" method="post" class="pmsForm">
+
                         <table width="50%">
                             <tr>
                                 <td width="10%">
@@ -143,9 +136,12 @@
                                     <p class="read"><input type="text" readonly  maxlength="12"  id="year_labor"/></p>
                                 </td>
                                 <td width="10%" style="text-align: center">
-                                   <button  class="btn btn-primary" style="margin-bottom:-20px" >保存</button>
+                                    <button  class="btn btn-primary" style="margin-bottom:-20px" onclick="getCostLabor()">查询</button>
                                 </td>
-                                <td width="10%">
+                                <td width="10%" style="text-align: center">
+                                   <button  class="btn btn-primary" style="margin-bottom:-20px" onclick="saveCostLabor()">保存</button>
+                                </td>
+                                <td width="10%" style="text-align:center">
                                     <button  class="btn btn-primary" style="margin-bottom:-20px" onclick="exportCostLabor()">导出</button>
                                 </td>
                             </tr>
@@ -232,7 +228,7 @@
 
                             </table>
                         </div>
-                    </form>
+
                 </div>
                 <!-- /.tab-pane -->
                 <div class="tab-pane" id="tab_2">
