修复查询时 列表长度不占全屏的问题

--- a/WebContent/hr/human_vacation_list.html
+++ b/WebContent/hr/human_vacation_list.html
@@ -37,6 +37,8 @@
     function searchList() {
         $$.executeSearch('queryMyProcessList', 'conditionsDiv');
         $(".ui-helper-clearfix").eq(0).remove();
+        
+        $(".display").css("width","100%");
     }
 
     //验证是不是空
